--- a/home/article/templates/article/article.html
+++ b/home/article/templates/article/article.html
@@ -1,15 +1,10 @@
-<!doctype html>
-{% load staticfiles %}
-<html>
-  <head>
-    <title>網民聚落</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
+    {% extends 'main/base.html' %}
+    {% load staticfiles %}
+    {% block css %}
     <link rel="stylesheet" href="{% static 'article/css/article.css' %}">
-  </head>
-  <body>
-    {% include 'main/menu.html' %}
-    <h2>歡迎來到我的網地</h2>
+    {% endblock %}
+    {% block heading %}歡迎蒞臨{% endblock %}
+    {% block content %}
     {% include 'main/messages.html' %}
     {% include 'article/searchForm.html' %}
     <p class="inlineBlock"><a class="btn" href="{% url 'article:articleCreate' %}">新增文章</a></p>
@@ -33,7 +28,7 @@
       {% endfor %}
       <hr>
     {% endfor %} 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src={% static 'main/js/deleteConfirm.js' %}></script>
-  </body>
-</html>
+    {% endblock %}
+    {% block script %}
+      <script src={% static 'main/js/deleteConfirm.js' %}></script>
+    {% endblock %}
