--- a/home/article/templates/article/articleSearch.html
+++ b/home/article/templates/article/articleSearch.html
@@ -20,4 +20,13 @@
       {% endfor %}
     </table>
   {% endif %}
+  {% if user.is_authenticated %}
+      <br>
+      <form method="post" action="{% url 'article:commentCreate' article.id %}">
+        {% csrf_token %}
+        <input type="text" name="comment"  placeholder="留言 ...">
+        <input class="btn" type="submit" value="送出">
+      </form>
+      <br><br>
+    {% endif %}
   {% endblock %}
