--- a/home/article/static/article/css/article.css
+++ b/home/article/static/article/css/article.css
@@ -9,10 +9,14 @@
   margin-top: 1em;
 }
 
-.comment {
+.comment, .commentAuthor {
   font-size: 0.8em;
 }
 
+.commentAuthor {
+  font-weight:bold;
+  color:#186caf;
+}
 .commentTime {
   font-size: 0.6em;
   color: #777777;
@@ -50,3 +54,18 @@ input[type=text] {
 .table-hover tr:hover td {
   background-color: #cdeaf0;
 }
+
+.like {
+  font-weight: bold;
+  color: #3e7bd1;
+}
+
+img#like {
+  vertical-align: middle;
+  width: 1.6em;
+}
+
+
+
+
+
