--- a/home/article/templates/article/article.html
+++ b/home/article/templates/article/article.html
@@ -5,7 +5,6 @@
     {% endblock %}
     {% block heading %}歡迎蒞臨{% endblock %}
     {% block content %}
-    {% include 'main/messages.html' %}
     {% include 'article/searchForm.html' %}
     <p class="inlineBlock"><a class="btn" href="{% url 'article:articleCreate' %}">新增文章</a></p>
     <br><br><hr> 
@@ -19,8 +18,12 @@
           </form>
           <p>發表時間：{{ item.pubDateTime|date:'Y-m-d H:i' }}</p>
           <div class="articleContent">{{ item.content|linebreaks|truncatechars_html:30 }}</div>
+          <p class=like>
+          <img id=like src="{% static 'main/img/like.png' %}" alt="Like"> {{ item.likes.count }}
+        </p>
         {% else %}
           <div class="commentDiv">
+            <span class="commentAuthor">{{ item.user.profile.fullName }}</span>
             <span class="comment">{{ item.content }}</span><br>
             <span class="commentTime">{{ item.pubDateTime|date:'m月d日 H:i' }}</span>
           </div>
