--- a/home/main/templates/main/base.html
+++ b/home/main/templates/main/base.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     {% include 'main/menu.html' %}
-    <h2>部落格 -- {% block heading %}{% endblock %}</h2>
+    <h2>批踢踢實業坊{% block heading %}{% endblock %}</h2>
     {% include 'main/messages.html' %}
     {% block content %}{% endblock %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
