--- a/home/main/static/main/css/main.css
+++ b/home/main/static/main/css/main.css
@@ -5,7 +5,7 @@ html, body {
 
 body {
   padding: 20px;
-  background: url(../img/background.jpg) fixed;
+  background-color: #d3d7cf;
   background-repeat: repeat;
 }
 
